st-66: create guarante page

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: white;
 }
 
 code {
@@ -13,5 +14,5 @@ code {
 .App {
   margin: 0 auto;
   max-width: 320px;
-  background-color: '#fcfcfc';
+  background-color: white;
 }
